- fix constraints for columns with multiple columns in search_sql
- remove unauthorized collection links
- copy parameters and html_options on cloning action link
- fix missing argument in datepicker conditions
- check authorization in model for plural associations nested links
- Allow to set action_group in nested.add_link
- fix current page when is inside outer window

= 3.2.16
- Fix use of column.css_class in form when is a proc, it wasn't skipped when form was a columns group
- Fix constraints and colspan in self-referential associations
- Fix rendering parent row after creating or updating in a nested form (singular associations)
- Translate include_blank and prompt in form_ui :select
- Fix mark for nested scaffolds
- Fix STI creation
- Fix null search for numeric columns
- Fix recordselect inplace_edit with plural associations in ruby 1.9

= 3.2.15
- Prepare to unify field overrides and list_ui method signatures
- Add :optional to update.persistent
- Add missing triggering of as:element_updated in new subform rows
- Fix conditions for :select in field_search
- Fix datetime field search
- Fix authorization checking in member action links

= 3.2.14
- Fix default sorting, it was broken in 3.2.13

= 3.2.13
- Fix destroy action, was broken in 3.2.12
- Remove default :method sorting for associations, it wasn't useful and can be slow
- Rescue from ActiveScaffold::ActionNotAllowed and ActiveScaffold::RecordNotAllowed with 401 response, it can be overrided with deny_access method in ApplicationController.
- Allow to set arrays in search_sql so one column can search in multiple db columns, resulting sql chunks will be OR'ed
- Hide text input on searching for null or not null
- Add some classes to forms to improve CSS customization
- Fix nested links for STI controllers with common configuration in a base controller
- Fix adding routes twice in active_scaffold generator
- Restore old behavior for action_link's security_method, ignore_method already hides the link 